Criado através do Colab

--- a/Projeto_Alura.ipynb
+++ b/Projeto_Alura.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNM8y9tdBX4GUx3GWx9R09N",
+      "authorship_tag": "ABX9TyNM8jeym9Mp3Y2mxo03UoT6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,11 +28,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
-        "id": "ZxDEiKA1ffek"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 106
+        },
+        "id": "ZxDEiKA1ffek",
+        "outputId": "29199600-c10f-42c6-97aa-79eab3780b66"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "'(' was never closed (<ipython-input-10-cd3d6be166ee>, line 11)",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-10-cd3d6be166ee>\"\u001b[0;36m, line \u001b[0;32m11\u001b[0m\n\u001b[0;31m    api_key = (api_key\u001b[0m\n\u001b[0m              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m '(' was never closed\n"
+          ]
+        }
+      ],
       "source": [
         "# Instale as bibliotecas necessárias\n",
         "!pip install -U googlemaps\n",
@@ -42,10 +56,11 @@
         "from datetime import datetime\n",
         "\n",
         "# Insira sua chave de API do Google Maps\n",
-        "api_key = 'AIzaSyB30e0jKY_7TzG-i0UVsfFgL6EfJPS1GVM'\n",
-        "\n",
+        "from google.colab import userdata\n",
+        "api_key = userdata.get('SECRET_KEY')\n",
+        "api_key = (api_key\n",
         "# Configure o cliente da API do Google Maps\n",
-        "gmaps = googlemaps.Client(\"AIzaSyB30e0jKY_7TzG-i0UVsfFgL6EfJPS1GVM\")\n",
+        "gmaps = googlemaps.Client(key=api_key)\n",
         "\n",
         "# Função para obter informações sobre áreas de enchente\n",
         "def get_flood_info(location):\n",
